--- a/dataset_business_city_list.ipynb
+++ b/dataset_business_city_list.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Preview:\n",
+    "### Preview\n",
     "Listing of All Businesses\n",
     "https://data.lacity.org/Administration-Finance/Listing-of-All-Businesses/r4uk-afju/about_data\n"
    ]
@@ -426,13 +426,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### NAICS information\n",
-    "data collection from https://www.naics.com/search/#naics"
+    "### Cities list in LA area\n",
+    "data collection from https://en.wikipedia.org/wiki/List_of_cities_in_Los_Angeles_County,_California"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,36 +445,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Attempt 1 \n",
-    "Get 2 digits info from webpage"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "web_url = 'https://www.naics.com/search/#naics'\n",
-    "html_content = requests.get(web_url).text\n",
-    "soup = BS(html_content, 'html.parser')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = []\n",
-    "for code in soup.find_all('td', attrs = {'class': \"first_child noWrap\"}):\n",
-    "    sector_title = code.find_next('td')\n",
-    "    num_us_entities = code.find_next('td').find_next('td')\n",
-    "    #print(code.string, '\\t', sector_title.string, '\\t\\t', num_us_entities.string)\n",
-    "    data.append([code.string.strip() if code.string else '',\n",
-    "                 sector_title.string.strip() if sector_title.string else '',\n",
-    "                 num_us_entities.string.strip() if num_us_entities.string else ''\n",
-    "                 ])    "
+    "#### Attempt 1 \n"
    ]
   },
   {
@@ -483,154 +454,71 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.DataFrame(data, columns=['Code', 'Sector_Title', 'Number_of_US_Entities'])\n",
-    "df.to_csv('naics_dict.csv', index=False) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Attempt 2\n",
-    "Get links from webpage for more detailed NAICS information\n",
-    "\n",
-    "Get detailed NAICS information from sub-links then combine to bigger dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# function get NAICS info from detailed url\n",
-    "def naics_data_collect(web_url):\n",
-    "    html_content = requests.get(web_url).text\n",
-    "    soup = BS(html_content, 'html.parser')\n",
-    "    data = []\n",
-    "    for code in soup.find_all('div', attrs = {'class': \"naicscode\"}):\n",
-    "        sector_title = code.find_next('div')\n",
-    "        num_us_entities = code.find_next('div').find_next('div')\n",
-    "        data.append([code.string.strip() if code.string else '',\n",
-    "                    sector_title.string.strip() if sector_title.string else '',\n",
-    "                    num_us_entities.string.strip() if num_us_entities.string else ''\n",
-    "                    ])\n",
-    "    df = pd.DataFrame(data, columns=['Code', 'Sector_Title', 'Number_of_US_Entities'])\n",
-    "    return df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# attempt to save all naics links to set for later use\n",
-    "web_url = 'https://www.naics.com/search/#naics'\n",
+    "web_url = 'https://en.wikipedia.org/wiki/List_of_cities_in_Los_Angeles_County,_California'\n",
     "html_content = requests.get(web_url).text\n",
-    "soup = BS(html_content, 'html.parser')\n",
-    "links = set()\n",
-    "for content in soup.find_all('td', attrs = {'class': \"first_child noWrap\"}):\n",
-    "    a_tag = content.find('a')\n",
-    "    if a_tag:\n",
-    "        link = a_tag.get('href')\n",
-    "        links.add(link)\n",
-    "# links contain all sublink of 6 digits naics page"
+    "soup = BS(html_content, 'html.parser')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_list = []\n",
-    "for link in links:\n",
-    "    temp = naics_data_collect(link)\n",
-    "    df_list.append(temp)\n",
-    "\n",
-    "df_all = pd.concat(df_list, ignore_index=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "*Note:* find out why duplicates records appear?"
+    "data = []\n",
+    "counter = 0\n",
+    "for row in soup.find_all('tr'):\n",
+    "    cells = row.find_all('td')\n",
+    "    if len(cells) >= 3:\n",
+    "        city_link = cells[0].find('a')\n",
+    "        if city_link and 'California' in city_link.get('title', ''):\n",
+    "            city = city_link.get_text(strip=True)\n",
+    "            incorporation_date = cells[1].get_text(strip=True)\n",
+    "            population = cells[2].get_text(strip=True)\n",
+    "            data.append([city, incorporation_date, population])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 87 entries, 0 to 86\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column             Non-Null Count  Dtype         \n",
+      "---  ------             --------------  -----         \n",
+      " 0   City               87 non-null     object        \n",
+      " 1   Date_incorporated  87 non-null     datetime64[ns]\n",
+      " 2   Population         87 non-null     int64         \n",
+      "dtypes: datetime64[ns](1), int64(1), object(1)\n",
+      "memory usage: 2.2+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(data, columns=['City', 'Date_incorporated', 'Population'])\n",
+    "df['Date_incorporated'] = pd.to_datetime(df['Date_incorporated'])\n",
+    "df['Population'] = df['Population'].str.replace(',', '').astype(int)\n",
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_all.drop_duplicates(inplace=True)\n",
-    "df_all = df_all.iloc[1:,:]"
+    "df.to_csv('city_list.csv', index=False) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# save all naics info to csv\n",
-    "df_all.to_csv('naics_all_dict.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# break down total dataset to 6 digits, 4 digits, ...\n",
-    "df_6 = df_all[df_all['Code'].str.len() == 6]\n",
-    "df_4 = df_all[df_all['Code'].str.len() == 4]\n",
-    "df_2 = df_all[(df_all['Code'].str.len() != 6) & (df_all['Code'].str.len() != 4)]\n",
-    "df_6.to_csv('naics_6.csv', index=False)\n",
-    "df_4.to_csv('naics_4.csv', index=False)\n",
-    "df_2.to_csv('naics_2.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### NAICS information clean up"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file_path = 'dataset\\\\naics_dict.csv'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "naics_2 = pd.read_csv(file_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -654,252 +542,113 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Code</th>\n",
-       "      <th>Sector_Title</th>\n",
-       "      <th>Number_of_US_Entities</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Date_incorporated</th>\n",
+       "      <th>Population</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>11</td>\n",
-       "      <td>Agriculture, Forestry, Fishing and Hunting</td>\n",
-       "      <td>367,959</td>\n",
+       "      <td>Agoura Hills</td>\n",
+       "      <td>1982-12-08</td>\n",
+       "      <td>20299</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>21</td>\n",
-       "      <td>Mining</td>\n",
-       "      <td>33,339</td>\n",
+       "      <td>Alhambra</td>\n",
+       "      <td>1903-07-11</td>\n",
+       "      <td>82868</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>22</td>\n",
-       "      <td>Utilities</td>\n",
-       "      <td>52,270</td>\n",
+       "      <td>Arcadia</td>\n",
+       "      <td>1903-08-05</td>\n",
+       "      <td>56681</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>23</td>\n",
-       "      <td>Construction</td>\n",
-       "      <td>1,512,763</td>\n",
+       "      <td>Artesia</td>\n",
+       "      <td>1959-05-29</td>\n",
+       "      <td>16395</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>31-33</td>\n",
-       "      <td>Manufacturing</td>\n",
-       "      <td>660,640</td>\n",
+       "      <td>Avalon</td>\n",
+       "      <td>1913-06-26</td>\n",
+       "      <td>3460</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>42</td>\n",
-       "      <td>Wholesale Trade</td>\n",
-       "      <td>698,477</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>44-45</td>\n",
-       "      <td>Retail Trade</td>\n",
-       "      <td>1,870,617</td>\n",
+       "      <th>82</th>\n",
+       "      <td>Walnut</td>\n",
+       "      <td>1959-01-19</td>\n",
+       "      <td>28430</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>48-49</td>\n",
-       "      <td>Transportation and Warehousing</td>\n",
-       "      <td>711,582</td>\n",
+       "      <th>83</th>\n",
+       "      <td>West Covina</td>\n",
+       "      <td>1923-02-17</td>\n",
+       "      <td>109501</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>51</td>\n",
-       "      <td>Information</td>\n",
-       "      <td>370,463</td>\n",
+       "      <th>84</th>\n",
+       "      <td>West Hollywood</td>\n",
+       "      <td>1984-11-29</td>\n",
+       "      <td>35757</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>52</td>\n",
-       "      <td>Finance and Insurance</td>\n",
-       "      <td>771,419</td>\n",
+       "      <th>85</th>\n",
+       "      <td>Westlake Village</td>\n",
+       "      <td>1981-12-11</td>\n",
+       "      <td>8029</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>53</td>\n",
-       "      <td>Real Estate Rental and Leasing</td>\n",
-       "      <td>926,476</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>54</td>\n",
-       "      <td>Professional, Scientific, and Technical Services</td>\n",
-       "      <td>2,489,746</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>55</td>\n",
-       "      <td>Management of Companies and Enterprises</td>\n",
-       "      <td>93,116</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>56</td>\n",
-       "      <td>Administrative and Support and Waste… Services</td>\n",
-       "      <td>1,553,879</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>61</td>\n",
-       "      <td>Educational Services</td>\n",
-       "      <td>430,343</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>62</td>\n",
-       "      <td>Health Care and Social Assistance</td>\n",
-       "      <td>1,695,931</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>71</td>\n",
-       "      <td>Arts, Entertainment, and Recreation</td>\n",
-       "      <td>385,880</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>72</td>\n",
-       "      <td>Accommodation and Food Services</td>\n",
-       "      <td>931,927</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>81</td>\n",
-       "      <td>Other Services (except Public Administration)</td>\n",
-       "      <td>1,955,493</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>92</td>\n",
-       "      <td>Public Administration</td>\n",
-       "      <td>256,211</td>\n",
+       "      <th>86</th>\n",
+       "      <td>Whittier</td>\n",
+       "      <td>1898-02-28</td>\n",
+       "      <td>87306</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>87 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Code                                      Sector_Title  \\\n",
-       "0      11        Agriculture, Forestry, Fishing and Hunting   \n",
-       "1      21                                            Mining   \n",
-       "2      22                                         Utilities   \n",
-       "3      23                                      Construction   \n",
-       "4   31-33                                     Manufacturing   \n",
-       "5      42                                   Wholesale Trade   \n",
-       "6   44-45                                      Retail Trade   \n",
-       "7   48-49                    Transportation and Warehousing   \n",
-       "8      51                                       Information   \n",
-       "9      52                             Finance and Insurance   \n",
-       "10     53                    Real Estate Rental and Leasing   \n",
-       "11     54  Professional, Scientific, and Technical Services   \n",
-       "12     55           Management of Companies and Enterprises   \n",
-       "13     56    Administrative and Support and Waste… Services   \n",
-       "14     61                              Educational Services   \n",
-       "15     62                 Health Care and Social Assistance   \n",
-       "16     71               Arts, Entertainment, and Recreation   \n",
-       "17     72                   Accommodation and Food Services   \n",
-       "18     81     Other Services (except Public Administration)   \n",
-       "19     92                             Public Administration   \n",
+       "                City Date_incorporated  Population\n",
+       "0       Agoura Hills        1982-12-08       20299\n",
+       "1           Alhambra        1903-07-11       82868\n",
+       "2            Arcadia        1903-08-05       56681\n",
+       "3            Artesia        1959-05-29       16395\n",
+       "4             Avalon        1913-06-26        3460\n",
+       "..               ...               ...         ...\n",
+       "82            Walnut        1959-01-19       28430\n",
+       "83       West Covina        1923-02-17      109501\n",
+       "84    West Hollywood        1984-11-29       35757\n",
+       "85  Westlake Village        1981-12-11        8029\n",
+       "86          Whittier        1898-02-28       87306\n",
        "\n",
-       "   Number_of_US_Entities  \n",
-       "0                367,959  \n",
-       "1                 33,339  \n",
-       "2                 52,270  \n",
-       "3              1,512,763  \n",
-       "4                660,640  \n",
-       "5                698,477  \n",
-       "6              1,870,617  \n",
-       "7                711,582  \n",
-       "8                370,463  \n",
-       "9                771,419  \n",
-       "10               926,476  \n",
-       "11             2,489,746  \n",
-       "12                93,116  \n",
-       "13             1,553,879  \n",
-       "14               430,343  \n",
-       "15             1,695,931  \n",
-       "16               385,880  \n",
-       "17               931,927  \n",
-       "18             1,955,493  \n",
-       "19               256,211  "
+       "[87 rows x 3 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "naics_2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 20 entries, 0 to 19\n",
-      "Data columns (total 3 columns):\n",
-      " #   Column                 Non-Null Count  Dtype \n",
-      "---  ------                 --------------  ----- \n",
-      " 0   Code                   20 non-null     object\n",
-      " 1   Sector_Title           20 non-null     object\n",
-      " 2   Number_of_US_Entities  20 non-null     object\n",
-      "dtypes: object(3)\n",
-      "memory usage: 612.0+ bytes\n"
-     ]
-    }
-   ],
-   "source": [
-    "naics_2.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# function deal with naics code is range.\n",
-    "def code_range(code):\n",
-    "    if '-' in code:\n",
-    "        start, end = code.split('-')\n",
-    "        # code is range not single number, get every number between them.\n",
-    "        return [str(i) for i in range(int(start), int(end) + 1)]\n",
-    "    else:\n",
-    "        return [code]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "naics_2['Code'] = naics_2['Code'].apply(code_range)\n",
-    "\n",
-    "# DataFrame.explode(column, ignore_index=False)\n",
-    "# Transform each element of a list-like to a row, replicating index values.\n",
-    "# https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.explode.html#pandas.DataFrame.explode\n",
-    "expanded_df = naics_2.explode('Code').reset_index(drop=True)\n",
-    "expanded_df.to_csv('naics_2_clean.csv', index=False)"
+    "df"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "cs171env",
    "language": "python",
    "name": "python3"
   },
@@ -913,7 +662,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
