--- a/dataset_la_business_EDA.ipynb
+++ b/dataset_la_business_EDA.ipynb
@@ -64,14 +64,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_26440\\926956247.py:1: UserWarning: The argument 'infer_datetime_format' is deprecated and will be removed in a future version. A strict version of it is now the default, see https://pandas.pydata.org/pdeps/0004-consistent-to-datetime-parsing.html. You can safely remove this argument.\n",
+      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_32532\\926956247.py:1: UserWarning: The argument 'infer_datetime_format' is deprecated and will be removed in a future version. A strict version of it is now the default, see https://pandas.pydata.org/pdeps/0004-consistent-to-datetime-parsing.html. You can safely remove this argument.\n",
       "  df['LOCATION END DATE'] = pd.to_datetime(df['LOCATION END DATE'], errors='coerce', infer_datetime_format=True)\n"
      ]
     },
@@ -114,46 +114,6 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1593026 entries, 0 to 1593025\n",
-      "Data columns (total 16 columns):\n",
-      " #   Column                     Non-Null Count    Dtype         \n",
-      "---  ------                     --------------    -----         \n",
-      " 0   LOCATION ACCOUNT #         1593026 non-null  object        \n",
-      " 1   BUSINESS NAME              1593026 non-null  object        \n",
-      " 2   DBA NAME                   245872 non-null   object        \n",
-      " 3   STREET ADDRESS             1592924 non-null  object        \n",
-      " 4   CITY                       1592920 non-null  object        \n",
-      " 5   ZIP CODE                   1593026 non-null  object        \n",
-      " 6   LOCATION DESCRIPTION       1592903 non-null  object        \n",
-      " 7   MAILING ADDRESS            359466 non-null   object        \n",
-      " 8   MAILING CITY               359478 non-null   object        \n",
-      " 9   MAILING ZIP CODE           359344 non-null   object        \n",
-      " 10  NAICS                      624448 non-null   Int64         \n",
-      " 11  PRIMARY NAICS DESCRIPTION  624448 non-null   object        \n",
-      " 12  COUNCIL DISTRICT           1593026 non-null  int64         \n",
-      " 13  LOCATION START DATE        1591469 non-null  datetime64[ns]\n",
-      " 14  LOCATION END DATE          998794 non-null   datetime64[ns]\n",
-      " 15  LOCATION                   670305 non-null   object        \n",
-      "dtypes: Int64(1), datetime64[ns](2), int64(1), object(12)\n",
-      "memory usage: 196.0+ MB\n",
-      "None\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(df.info())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
    "outputs": [],
    "source": [
     "# drop na NAICS and na Start date\n",
@@ -162,14 +122,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_26440\\1167118112.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_32532\\2133676695.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -191,50 +151,10 @@
    "source": [
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "year_start, year_end = 1990, df1[\"Year\"].max()\n",
     "df1['Year'] = df1['LOCATION START DATE'].dt.year\n",
+    "year_start, year_end = 1990, df1[\"Year\"].max()\n",
     "plot1 = sns.histplot(df1['Year'], bins=range(year_start, year_end), kde=False)\n",
     "plot1 = plt.title(f'Preview: Business open year histogram {year_start} to {year_end}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 624379 entries, 0 to 1593025\n",
-      "Data columns (total 17 columns):\n",
-      " #   Column                     Non-Null Count   Dtype         \n",
-      "---  ------                     --------------   -----         \n",
-      " 0   LOCATION ACCOUNT #         624379 non-null  object        \n",
-      " 1   BUSINESS NAME              624379 non-null  object        \n",
-      " 2   DBA NAME                   209427 non-null  object        \n",
-      " 3   STREET ADDRESS             624375 non-null  object        \n",
-      " 4   CITY                       624332 non-null  object        \n",
-      " 5   ZIP CODE                   624379 non-null  object        \n",
-      " 6   LOCATION DESCRIPTION       624361 non-null  object        \n",
-      " 7   MAILING ADDRESS            297306 non-null  object        \n",
-      " 8   MAILING CITY               297315 non-null  object        \n",
-      " 9   MAILING ZIP CODE           297208 non-null  object        \n",
-      " 10  NAICS                      624379 non-null  Int64         \n",
-      " 11  PRIMARY NAICS DESCRIPTION  624379 non-null  object        \n",
-      " 12  COUNCIL DISTRICT           624379 non-null  int64         \n",
-      " 13  LOCATION START DATE        624379 non-null  datetime64[ns]\n",
-      " 14  LOCATION END DATE          93433 non-null   datetime64[ns]\n",
-      " 15  LOCATION                   584441 non-null  object        \n",
-      " 16  Year                       624379 non-null  int32         \n",
-      "dtypes: Int64(1), datetime64[ns](2), int32(1), int64(1), object(12)\n",
-      "memory usage: 84.0+ MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df1.info()"
    ]
   },
   {
@@ -301,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,9 +297,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_32532\\4042404137.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df1[['latitude', 'longitude']] = df1['LOCATION'].apply(lambda x: pd.Series(parse_location(x)))\n",
+      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_32532\\4042404137.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df1[['latitude', 'longitude']] = df1['LOCATION'].apply(lambda x: pd.Series(parse_location(x)))\n"
+     ]
+    }
+   ],
    "source": [
     "# Extract latitude and longitude\n",
     "df1[['latitude', 'longitude']] = df1['LOCATION'].apply(lambda x: pd.Series(parse_location(x)))"
@@ -387,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,10 +339,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing: 584441/584441  (1.0)\t\t982889633)\t\t)\t\t\tProcess Completed!\n"
+     ]
+    }
+   ],
    "source": [
-    "# Calculate map center\n",
-    "map_center = [df1['latitude'].mean(), df1['longitude'].mean()]\n",
+    "# Map center, manually set to LA union station parking\n",
+    "map_center = [34.05525, -118.23737]\n",
     "\n",
     "# Initialize the map\n",
     "business_map = folium.Map(location=map_center, zoom_start=12)\n",
@@ -411,16 +358,28 @@
     "# Add marker clusters\n",
     "marker_cluster = MarkerCluster().add_to(business_map)\n",
     "\n",
+    "cur = 0\n",
+    "total = len(df1)\n",
     "# Add business markers\n",
     "for _, row in df1.iterrows():\n",
+    "    cur += 1\n",
     "    folium.Marker(\n",
     "        location=[row['latitude'], row['longitude']],\n",
     "        popup=folium.Popup(f\"{row['BUSINESS NAME']}<br>{row['STREET ADDRESS']}\", max_width=250),\n",
     "        icon=folium.Icon(color='blue', icon='info-sign')\n",
     "    ).add_to(marker_cluster)\n",
+    "    print(f'\\rProcessing: {cur}/{total}  ({cur / total: .0%})\\t\\t', end='', flush=True)\n",
+    "print(f'Process Completed!')\n",
     "\n",
     "# Display the map\n",
     "business_map"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Problem: dataset content processed under 10 min, however the map does not render successful due to too many data."
    ]
   },
   {
