--- a/dataset_la_business_EDA.ipynb
+++ b/dataset_la_business_EDA.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -64,14 +64,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_32532\\926956247.py:1: UserWarning: The argument 'infer_datetime_format' is deprecated and will be removed in a future version. A strict version of it is now the default, see https://pandas.pydata.org/pdeps/0004-consistent-to-datetime-parsing.html. You can safely remove this argument.\n",
+      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_33504\\926956247.py:1: UserWarning: The argument 'infer_datetime_format' is deprecated and will be removed in a future version. A strict version of it is now the default, see https://pandas.pydata.org/pdeps/0004-consistent-to-datetime-parsing.html. You can safely remove this argument.\n",
       "  df['LOCATION END DATE'] = pd.to_datetime(df['LOCATION END DATE'], errors='coerce', infer_datetime_format=True)\n"
      ]
     },
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,14 +122,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_32532\\2133676695.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_33504\\2133676695.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,108 +384,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'Address'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[1;32me:\\Code\\anaconda3\\envs\\cs171env\\lib\\site-packages\\pandas\\core\\indexes\\base.py:3805\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3804\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m-> 3805\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   3806\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
-      "File \u001b[1;32mindex.pyx:167\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mindex.pyx:196\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mpandas\\\\_libs\\\\hashtable_class_helper.pxi:7081\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mpandas\\\\_libs\\\\hashtable_class_helper.pxi:7089\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'Address'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[46], line 12\u001b[0m\n\u001b[0;32m      8\u001b[0m df_business \u001b[38;5;241m=\u001b[39m df1\u001b[38;5;241m.\u001b[39mcopy()\n\u001b[0;32m     10\u001b[0m \u001b[38;5;66;03m# Assume the CSV has these columns: 'Business', 'Address', 'City', 'State'\u001b[39;00m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;66;03m# Create a full address column for geocoding\u001b[39;00m\n\u001b[1;32m---> 12\u001b[0m df_business[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFull_Address\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mdf_business\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mAddress\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m, \u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m df_business[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCity\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m, \u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m df_business[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mState\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m     14\u001b[0m \u001b[38;5;66;03m# Optionally include ZIP if available\u001b[39;00m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mZip\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m df_business\u001b[38;5;241m.\u001b[39mcolumns:\n",
-      "File \u001b[1;32me:\\Code\\anaconda3\\envs\\cs171env\\lib\\site-packages\\pandas\\core\\frame.py:4102\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   4100\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m   4101\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[1;32m-> 4102\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   4103\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[0;32m   4104\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
-      "File \u001b[1;32me:\\Code\\anaconda3\\envs\\cs171env\\lib\\site-packages\\pandas\\core\\indexes\\base.py:3812\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3807\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[0;32m   3808\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[0;32m   3809\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[0;32m   3810\u001b[0m     ):\n\u001b[0;32m   3811\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[1;32m-> 3812\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01merr\u001b[39;00m\n\u001b[0;32m   3813\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[0;32m   3814\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[0;32m   3815\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[0;32m   3816\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[0;32m   3817\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'Address'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import folium\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import time\n",
     "from geopy.exc import GeocoderTimedOut\n",
     "from geopy.geocoders import Nominatim\n",
     "\n",
     "# Load the business dataset from the CSV file\n",
     "df_business = df1.copy()\n",
     "\n",
-    "# Assume the CSV has these columns: 'Business', 'Address', 'City', 'State'\n",
+    "# Assume the CSV has these columns: 'Business', 'STREET ADDRESS', 'City', 'State'\n",
     "# Create a full address column for geocoding\n",
-    "df_business['Full_Address'] = df_business['Address'] + \", \" + df_business['City'] + \", \" + df_business['State']\n",
-    "\n",
-    "# Optionally include ZIP if available\n",
-    "if 'Zip' in df_business.columns:\n",
-    "    df_business['Full_Address'] = df_business['Full_Address'] + \", \" + df_business['Zip'].astype(str)\n",
+    "df_business['Full_Address'] = df_business['STREET ADDRESS'] + \", \" + df_business['CITY']\n",
     "\n",
     "# Define a function to fetch geocode data using Nominatim\n",
-    "def findGeocode(address):\n",
-    "    try:\n",
-    "        geolocator = Nominatim(user_agent=\"business_map\")\n",
-    "        return geolocator.geocode(address)\n",
-    "    except GeocoderTimedOut:\n",
-    "        return None\n",
+    "def findGeocode(address, retries=3, delay=1):\n",
+    "    geolocator = Nominatim(\n",
+    "        user_agent=\"my_business_mapping_app_contact@email.com\",  # Use a valid email\n",
+    "        timeout=10  # Increase timeout to 10 seconds\n",
+    "    )\n",
+    "    \n",
+    "    for _ in range(retries):\n",
+    "        try:\n",
+    "            location = geolocator.geocode(address)\n",
+    "            if location:\n",
+    "                return (location.latitude, location.longitude)\n",
+    "        except (GeocoderTimedOut, GeocoderUnavailable) as e:\n",
+    "            print(f\"Geocoding timed out for {address}, retrying...\")\n",
+    "            time.sleep(delay)\n",
+    "            delay *= 2  # Exponential backoff\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error geocoding {address}: {str(e)}\")\n",
+    "            break\n",
+    "            \n",
+    "    return (np.nan, np.nan)\n",
     "\n",
     "# Initialize lists to store latitude and longitude values\n",
-    "latitudes = []\n",
-    "longitudes = []\n",
+    "df_business['Latitude'] = np.nan\n",
+    "df_business['Longitude'] = np.nan\n",
     "\n",
-    "# For each full address, get the coordinates\n",
-    "for address in df_business['Full_Address']:\n",
-    "    location = findGeocode(address)\n",
-    "    if location:\n",
-    "        latitudes.append(location.latitude)\n",
-    "        longitudes.append(location.longitude)\n",
-    "    else:\n",
-    "        latitudes.append(np.nan)\n",
-    "        longitudes.append(np.nan)\n",
-    "\n",
-    "# Append the coordinates to the DataFrame\n",
-    "df_business['Latitude'] = latitudes\n",
-    "df_business['Longitude'] = longitudes\n",
-    "\n",
-    "# Calculate a center for the map (using the mean of the coordinates)\n",
-    "map_center = [df_business['Latitude'].mean(), df_business['Longitude'].mean()]\n",
-    "\n",
-    "# Create a Folium map centered at the calculated center\n",
-    "business_map = folium.Map(location=map_center, zoom_start=12)\n",
-    "\n",
-    "# Loop through the DataFrame and add a marker for each business\n",
+    "# Geocode with rate limiting\n",
     "for idx, row in df_business.iterrows():\n",
-    "    if not np.isnan(row['Latitude']) and not np.isnan(row['Longitude']):\n",
-    "         folium.Marker(\n",
-    "             location=[row['Latitude'], row['Longitude']],\n",
-    "             popup=f\"{row['Business']}<br>{row['Full_Address']}\"\n",
-    "         ).add_to(business_map)\n",
+    "    address = row['Full_Address']\n",
+    "    lat, lon = findGeocode(address)\n",
+    "    \n",
+    "    df_business.at[idx, 'Latitude'] = lat\n",
+    "    df_business.at[idx, 'Longitude'] = lon\n",
+    "    \n",
+    "    time.sleep(1)  # Add 1-second delay between requests to respect rate limits\n",
     "\n",
-    "# Display the map\n",
-    "business_map"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### To-Do:\n",
-    "Visualization:\n",
+    "# Create map using valid coordinates\n",
+    "valid_coords = df_business.dropna(subset=['Latitude', 'Longitude'])\n",
+    "if not valid_coords.empty:\n",
+    "    map_center = [valid_coords['Latitude'].mean(), valid_coords['Longitude'].mean()]\n",
+    "    business_map = folium.Map(location=map_center, zoom_start=12)\n",
     "\n",
-    "Botplot: different induastry vs survivual time\n",
+    "    for idx, row in valid_coords.iterrows():\n",
+    "        folium.Marker(\n",
+    "            location=[row['Latitude'], row['Longitude']],\n",
+    "            popup=f\"{row['Business']}<br>{row['Full_Address']}\"\n",
+    "        ).add_to(business_map)\n",
     "\n",
-    "Location: geo graph + (la zoning map or population density map)\n",
-    "\n",
-    "survival time by different business (naics code) (similar to histogram)\n",
-    "\n",
-    "\n",
-    "Note: finalize presentation need to show simple EDA idaes\n"
+    "    business_map\n",
+    "else:\n",
+    "    print(\"No valid coordinates found to create map\")"
    ]
   },
   {
